--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./esercizio.js">   
+    <script src="./shop.js">   
         
     </script>
 </body>
