Composizione Frase completata

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Frase Signore Degli Anelli</title>
 </head>
 <body>
-<script src="./Frase.js">
-    
-</script>
+    <script src="./index.js">
+        
+    </script>
+
 </body>
 </html>
