fix errore frase

--- a/esercizio3.html
+++ b/esercizio3.html
@@ -6,7 +6,7 @@
     <title>Frase Signore Degli Anelli</title>
 </head>
 <body>
-    <script src="./index.js">
+    <script src="./esercizio3.js">
         
     </script>
 
